DATE       AUTHOR       CHANGE
---------- ------------ -------------------------------------------------------
2006-08-31 patrickh     Callers of DPP_ABI_SETUP can now override the default
                        set of architectures targeted when making universal
                        binaries on Mac OS X.
                        NEW VERSION: 2.1.3
2006-07-10 patrickh     Added compiler detection macros for Objective-C
                        (DPP_PROG_OBJC) and Objective-C++ (DPP_PROG_OBJCXX).
2006-06-25 patrickh     Added support for universal binaries on Mac OS X.
                        NEW VERSION: 2.1.2
2006-06-25 patrickh     Use libtool(1) instead of ar(1) on Mac OS X.
2006-05-17 patrickh     Fixed a version detection bug in DPP_HAVE_GNU_MAKE for
                        the case of GNU Make pre-releases.
                        NEW VERSION: 2.1.1
2006-04-14 patrickh     dpp.libs.targets.mk no longer dictates naming
                        conventions for static and shared libraries.
                        NEW VERSION: 2.1.0

[2.0.2 released - 4.14.2006]===================================================
2005-11-16 patrickh     Provide $BOOST_LIB_VERSION from DPP_HAVE_BOOST as
                        extracted directly from boost/version.hpp.
2005-08-23 patrickh     Added awareness of GCJ in the JDK detection macros.
2005-07-01 patrickh     Fixed libjvm.so detection on Linux/amd64.

[2.0.1 released - 6.18.2005]===================================================
2005-03-20 patrickh     Introduced DPP_VERSION_CHECK_MSG_NO_CACHE.
                        NEW VERSION: 2.0.1

[2.0.0 released - 2.16.2005]===================================================
2004-12-02 patrickh     Improved support for the Intel C/C++ compiler.
                        NEW VERSION: 1.99.20
2004-12-02 patrickh     DPP_PROG_CC and DPP_PROG_CXX no longer call
                        DPP_SETUP_COMPILER automatically.
                        NEW VERSION: 1.99.19